[gd_scene load_steps=3 format=3 uid="uid://djclp1hf03xbu"]

[ext_resource type="Script" uid="uid://efo0irekxbtv" path="res://script/UI/sound_settings.gd" id="1_8wydy"]
[ext_resource type="FontFile" uid="uid://kc3lu3wqhvfu" path="res://assets/fonts/PixelOperator8.ttf" id="2_ujnuw"]

[node name="SoundSettings" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8wydy")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -445.5
offset_top = -238.0
offset_right = 445.5
offset_bottom = 238.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ujnuw")
theme_override_font_sizes/font_size = 36
text = "Audio"
horizontal_alignment = 1

[node name="Spacer" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ujnuw")
theme_override_font_sizes/font_size = 36
text = "{-----------------------}"
horizontal_alignment = 1

[node name="BackgroundMusic" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LabelBackground" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/BackgroundMusic"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_ujnuw")
theme_override_font_sizes/font_size = 16
text = "Background Volume"

[node name="Spacer" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/BackgroundMusic"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSliderBackground" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/BackgroundMusic"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -80.0
max_value = 0.0
value = -20.0

[node name="Spacer2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ujnuw")
theme_override_font_sizes/font_size = 36
horizontal_alignment = 1

[node name="SfxMusic" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LabelSfx" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/SfxMusic"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_ujnuw")
theme_override_font_sizes/font_size = 16
text = "Sfx Volume"

[node name="Spacer" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/SfxMusic"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSliderSfx" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/SfxMusic"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -80.0
max_value = 0.0
value = -20.0

[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/BackgroundMusic/HSliderBackground" to="." method="_on_background_music_value_changed"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/SfxMusic/HSliderSfx" to="." method="_on_sfx_value_changed"]
